--- a/Trabalhos/Ficha02/index.html
+++ b/Trabalhos/Ficha02/index.html
@@ -8,7 +8,7 @@
     <header>
         <h1>Jornal Online</h1>
         <h2>O Melhor Jornal de Notícias</h2>
-        <img src="logo.png" alt="Logotipo do Jornal">
+        <img src="https://picsum.photos/100" alt="Logotipo do Jornal">
     </header>
 
     <nav>
@@ -25,14 +25,14 @@
         <article>
             <h3>Título da Notícia 1</h3>
             <p>Introdução da notícia 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <img src="noticia1.jpg" alt="Imagem da Notícia 1">
+            <img src="https://unsplash.it/400/400" alt="Imagem da Notícia 1">
             <footer>Autor: João Silva | Data: 25-09-2024</footer>
         </article>
 
         <article>
             <h3>Título da Notícia 2</h3>
             <p>Introdução da notícia 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <img src="noticia2.jpg" alt="Imagem da Notícia 2">
+            <img src="https://unsplash.it/400/400" alt="Imagem da Notícia 2">
             <footer>Autor: Maria Ferreira | Data: 26-09-2024</footer>
         </article>
     </section>
