--- a/Trabalhos/Ficha03/video_legendas.html
+++ b/Trabalhos/Ficha03/video_legendas.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <video controls preload="auto" width="640" height="360">
-        <source src="video.mp4" type="video/mp4">
-        <track src="legendas_pt.vtt" kind="subtitles" srclang="pt" label="Português">
-        <track src="legendas_en.vtt" kind="subtitles" srclang="en" label="Inglês">
-        <track src="legendas_es.vtt" kind="subtitles" srclang="es" label="Espanhol">
+        <source src="https://www.youtube.com/embed/FgaxAEyTqoI" type="video/mp4">
+        <track src="pt.vtt" kind="subtitles" srclang="pt" label="Português">
+        <track src="en.vtt" kind="subtitles" srclang="en" label="Inglês">
+        <track src="tt.vtt" kind="subtitles" srclang="es" label="Espanhol">
         O seu navegador não suporta o elemento de vídeo.
     </video>
 
